--- a/style.css
+++ b/style.css
@@ -1,8 +1,51 @@
-.caja{
-    color: rgb(43, 230, 230);
-    width: 70px;
+body{
+    background-color: rgba(2, 160, 221, 1);
+    height: 100vh;
+    display: flex;
+    margin: 0%;
+}
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+}
+.login{
+    width: 400px;
+    height: 300px;
+    background-color: white;
+    text-align: center;
+}
+.login-wrapper{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding: 50px;
+    box-sizing: border-box;
+}
+.login-title{
+    margin: 0%;
+    text-align: center;
+}
+.login-text{
+    margin: 30px 0 0 0;
+}
+.login-input-email{
+    margin-top: 30px;
+    width: 300px;
     height: 30px;
-    border: solid 1px chocolate;
+    border-radius: 5px;
+    border: 1px solid rgba(white);
     padding: 6px;
-    margin: 6px;
+}
+.login-button{
+    padding: 0;
+    margin: 12px auto 0;
+    display: block;
+    width: 120px;
+    height: 40px;
+    background-color: rgba(2, 160, 221, 1);
+    color: #ffff;
+    border-radius: 5px;
+    border: 0;
 }
